--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "concurrently": "^9.2.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
